# SAMvoice

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  WINDOWS_BUILD.md  udp_sam_test.pd
Source/: Main.cpp  MainComponent.cpp  MainComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SpeakNSpellVoice.h
UE5_SAMUdpMetaSound/Plugins/SAMUdpMetaSound/Source/SAMUdpMetaSound/: SAMUdpMetaSound.Build.cs
UE5_SAMUdpMetaSound/Plugins/SAMUdpMetaSound/Source/SAMUdpMetaSound/Private/: SAMUdpMetaSoundModule.cpp
UE5_SAMUdpMetaSound/Plugins/SAMUdpMetaSound/Source/SAMUdpMetaSound/Private/Nodes/: SAMUdpSendNode.cpp
UE5_SAMUdpMetaSound/Plugins/SAMUdpMetaSound/Source/SAMUdpMetaSound/Public/: SAMUdpMetaSoundModule.h
